# cloudflare-icons

./: .gitignore  Cargo.toml  README.md  debug-excalidraw.json  extract-icons.js  icon-comparison-report.md  icon-comparison-results.json  official-icons.json  package.json  playwright.config.ts  wrangler.toml
docs/: ICON_VERIFICATION_PLAN.md  project-action-plan.md  verification-results.json
scripts/: compare-and-update-icons.js  debug-excalidraw.js  debug-icon-names.js  fetch-official-icons.js  playwright-icon-verification.js  test-page-structure-detailed.js  test-page-structure.js
src/: icons.rs  index.html  lib.rs  utils.rs
tests/: README-excalidraw-tests.md  debug-html.spec.ts  excalidraw-download.spec.ts  excalidraw-text-positioning.spec.ts  excalidraw-visual-test.spec.ts  excalidraw-visual-verification.spec.ts  icon-normalization.spec.ts  screenshot-current.spec.ts  test-copy-icon.spec.ts  test-copy-simple.spec.ts  test-excalidraw-labels.spec.ts  verify-icons-official.spec.ts  verify-turnstile-fix.spec.ts
