[package]
name = "cloudflare-icons"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
base64 = "0.22"
include_dir = "0.7"
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "console"
]

[profile.release]
opt-level = "s"
lto = true

