[package]
name = "cloudflare-icons"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
base64 = "0.22"
console_error_panic_hook = "0.1"


[profile.release]
opt-level = "s"
lto = true

